--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>Heraz | Fresh Deli Everyday</title>
 
     <!-- External CSS -->
-	<link rel="stylesheet" type="text/css" href="./index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Castoro:ital@0;1&family=Oswald:wght@200..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
     <!-- Animation | CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -66,7 +71,7 @@
 
                 <!-- Modal -->
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
+                  <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                       <div class="modal-header">
                         <h5 class="modal-title" id="exampleModalLabel">Contact Us</h5>
@@ -108,7 +113,7 @@
     <!-- ABOUT SECTION START -->
     <div id="about" class="about">
       <div class="container col-xxl-8 px-4 py-5 rounded aos-init aos-animate" data-aos="fade-up" data-aos-duration="1000">
-        <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="row flex-lg-row-reverse align-items-center g-5">
           <div class="col-10 col-sm-8 col-lg-6">
             <div id="carouselExampleControls" class="carousel slide carousel-fade pointer-event" data-bs-ride="carousel">
               <div class="carousel-inner">
@@ -151,7 +156,7 @@
 
     <!-- PRODUCTS START -->
     <div id="products">
-      <div class="container rounded aos-init aos-animate"  data-aos="fade-up" data-aos-duration="1000">
+      <div class="container rounded aos-init aos-animate py-5"  data-aos="fade-up" data-aos-duration="1000">
         <div class="row">
           <div class="col-12">
             <h1 class="display-5 fw-bold lh-1 mb-3 mt-5 text-center">Our Products</h1>
